ui(chances): fix result message alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -406,17 +406,26 @@ input {
 }
 
 .chances::before {
+  --height: 2rem;
+  --height-half: calc(var(--height) / 2);
+
   content: "";
   position: absolute;
-  top: -0.9rem;
-  left: 0;
+  top: calc(50% - var(--height-half));
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
+  height: var(--height);
   opacity: 0;
+  transform: scaleY(0);
+
   font-size: 2rem;
+  font-weight: 600;
   letter-spacing: 0.2rem;
   text-align: center;
   text-transform: uppercase;
-  transform: scaleY(0);
 }
 
 .chances.over::before {
